--- a/index.html
+++ b/index.html
@@ -5,9 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pagina de Login</title>
+    <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
-    <header></header>
+    <header class="header">
+        <h1 class="title-header">Página de Login</h1>
+    </header>
     <section></section>
     <footer></footer>
 </body>
