--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
         <h1 class="title-header">Página de Login</h1>
     </header>
     <section></section>
-    <footer></footer>
+    <footer class="footer">
+        <p>&copy; 2023 Todos os direitos reservados</p>
+    </footer>
 </body>
 </html>
