--- a/index.html
+++ b/index.html
@@ -11,7 +11,17 @@
     <header class="header">
         <h1 class="title-header">Página de Login</h1>
     </header>
-    <section></section>
+    <section>
+        <form class="formulario">
+            <label class="label-input" for="usuario">Usuário:</label>
+            <input class="input" type="text" name="usuario" id="usuario" required>
+
+            <label class="label-input" for="senha">Senha:</label>
+            <input class="input" type="password" name="senha" id="senha" required>
+
+            <input class="btn-submit" type="submit" valeu="Entrar">
+        </form>
+    </section>
     <footer class="footer">
         <p>&copy; 2023 Todos os direitos reservados</p>
     </footer>
